# DroneNavigationPackage

./: .gitignore  CMakeLists.txt  README.md  package.xml  used_aliases.txt
msg/: Intervention.msg  TransformParameters.msg
src/headers/: CoordinateGeometryCalculations.h  DroneLogic.h  StateMachine.h
src/nodes/: DUMMY_listener.cpp  location_provider.cpp  main_control.cpp  w2d_tf_broadcaster.cpp
srv/: HedgePositions.srv
