<?xml version="1.0"?>
<package>

  <name>DroneNavigationPackage</name>
  <version>2.2.0</version>
  <description>The DroneNavigationPackage package</description>

  <maintainer email="nemeth.istvan1892@gmail.com">HLAR8M</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>marvelmind_nav</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>marvelmind_nav</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
